# pbp

./: .gitignore  AGENT_IMPLEMENTATION_PROTOCOL.md  CONFIG_REGISTRY.md  EXPERIMENTS.md  EXPERIMENT_LOG.md  KNOWN_ISSUES.md  PROGRESS.md  PROJECT_SPEC.md  README.md  RUNS.md  pyproject.toml  requirements.txt
configs/: eval_hh_rlhf.yaml  m9_pilot_qwen2p5_1p5b.yaml  model_qwen2p5_1p5b.yaml  model_qwen2p5_3b.yaml  model_qwen2p5_7b.yaml  pruning_10p.yaml  pruning_20p.yaml  pruning_30p.yaml
scripts/: apply_ffn_pruning.py  apply_mask_pruning.py  clean_run_status.py  compose_hybrid_scores.py  compute_base_logprobs.py  compute_dense_margins.py  compute_logprobs.py  evaluate_bcr.py  evaluate_general.py  prepare_hh_rlhf.py  report_coverage.py  report_mask_distribution.py  score_pruning_importance.py  summarize_m10a_matched_utility.py  summarize_m10b_matched_utility.py  summarize_m11a_layerwise.py  summarize_m12_hybrid.py  summarize_results.py
src/pbp/: __init__.py  chat_format.py  data.py  eval_general.py  ffn_units.py  hooks.py  io.py  logging_utils.py  logprobs.py  margins.py  metrics.py  pruning.py  scoring.py  utils.py
tests/: test_bcr_evaluation.py  test_bcr_metrics.py  test_data.py  test_logging_utils.py  test_logprobs.py  test_m10b_reports.py  test_m11a_summary.py  test_margins.py  test_metrics.py  test_pruning_shapes.py  test_scoring.py  test_summarize_m10a.py  test_summarize_results.py
tests/fixtures/: dense_margins_fixture.jsonl  hh_rlhf_processed_fixture.jsonl  hh_rlhf_raw_fixture.jsonl
