[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "preference-boundary-pruning"
version = "0.1.0"
description = "Preference boundary diagnostics under structured pruning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=0.30",
  "datasets>=2.19",
  "matplotlib>=3.8",
  "numpy>=1.24",
  "pyyaml>=6.0",
  "torch>=2.2",
  "tqdm>=4.66",
  "transformers>=4.43",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
